# TT_Observation_Layer

./: PROGRESS.md  alembic.ini  docker-compose.yml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_drop_promotion_events_run_fk.py
config/: model_versions.yaml  prometheus.yml  promoter_config.yaml
doc/: Observation-Storage-Triage-Mail_Documento-Consolidato.md  Triage-Mail-Pipeline-Production-Ready.md  message_envelope_sample.json
email-triage/: README.md  pyproject.toml
email-triage/src/: config.py  contracts.py
email-triage/src/candidates/: __init__.py  embeddings.py  extractor.py  stopwords.py
email-triage/src/classification/: __init__.py  classifier.py
email-triage/src/dictionary/: __init__.py  models.py  promoter.py  writer.py
email-triage/src/enrichment/: __init__.py  customer_status.py  priority.py
email-triage/src/entity_extraction/: __init__.py  ner_pipeline.py
email-triage/src/ingestion/: __init__.py  parser.py  preprocessor.py
scripts/: apply_retention.py  batch_promote.py
src/api/: main.py  metrics.py  routes.py
src/db/: session.py
src/dictionary/: collision_detector.py  promoter.py  versioning.py
src/models/: contracts.py  db.py  pipeline_version.py
src/observation_store/: reader.py  writer.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_idempotency.py  test_performance.py  test_promoter.py  test_spans.py  test_versioning.py
