[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage"
version = "2.0.0"
description = "Production-ready email triage pipeline with deterministic classification"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "openai>=1.30.0",
    "instructor>=1.3.0",
    "spacy>=3.7.4",
    "keybert>=0.8.3",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "cryptography>=42.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
